# DocBrain

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  questions-api-doc.md  requirements-test.txt  requirements.txt  restart_worker.sh  test_question.py  test_search.py
.cursor/rules/: requirements.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 18b3efd07130_add_document_summary_column.py  add_questions_table.py
app/: README.md  main.py
app/api/: api.py  deps.py
app/core/: chunking.py  config.py  llm_utils.py  middleware.py  permissions.py  prompts.py  security.py  utils.py  vector_utils.py
app/db/: base_class.py  database.py  storage.py
app/docs/: document_flow.md
app/examples/: rag_example.py  setup_rag.sh
app/models/: base.py  knowledge_base.py  message.py
app/repositories/: conversation_repository.py  document_repository.py  knowledge_base_repository.py  message_repository.py  question_repository.py  storage_repository.py  user_repository.py  vector_repository.py
app/schemas/: conversation.py  document.py  knowledge_base.py  message.py  question.py  user.py
app/services/: llm.py  (+12 more)
docs/: PRD.txt  README.md  api.md  doc_tech.md
examples/: docling_test.py
scripts/: init_alembic.py  init_db.py  init_db_with_seed.py  setup_test_data.py
tests/: conftest.py  test_auth.py  test_config.py  test_factories.py  test_health.py  test_models.py  test_permissions.py  test_rate_limiter.py  test_schemas.py
(+66 files in other folders)
