[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "docbrain"
version = "0.1.0"
description = "An AI-powered document management and chat system"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "mysqlclient>=2.2.1",
    "alembic>=1.13.1",
    "llama-index-core>=0.10.1",
    "llama-index-embeddings-google>=0.1.3",
    "llama-index-vector-stores-pinecone>=0.1.2",
    "pinecone>=3.0.0",
    "google-generativeai>=0.3.0",
    "sendgrid>=6.10.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-magic>=0.4.27",
    "email-validator",
    "mysql-connector-python>=8.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.3",
    "tiktoken>=0.5.2",
    "unstructured>=0.11.8",
] 